fix: userSection z-index bug

--- a/frontend/src/components/Header/style.module.scss
+++ b/frontend/src/components/Header/style.module.scss
@@ -12,6 +12,18 @@
 
   .logo {
     display: none;
+
+    @media (min-width: 700px) {
+      display: block;
+      background-color: transparent;
+      color: $color-b;
+      font-size: 2em;
+      border: 0;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .searchBar {
@@ -50,14 +62,24 @@
 
   .userSection {
     position: absolute;
-    top: 64px;
+    top: 60px;
     left: 0;
+    z-index: 20;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.75);
 
     display: flex;
     justify-content: center;
     padding: 8px;
+
+    @media (min-width: 700px) {
+      position: relative;
+      top: unset;
+      left: unset;
+      background-color: unset;
+      width: unset;
+      padding: unset;
+    }
   }
 
   .userBtn {
@@ -112,10 +134,8 @@
       background-color: $color-b;
     }
   }
-}
 
-@media (min-width: 700px) {
-  .navbarMenu {
+  @media (min-width: 700px) {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -129,27 +149,6 @@
 
     .menuBtn {
       display: none;
-    }
-
-    .logo {
-      display: block;
-      background-color: transparent;
-      color: $color-b;
-      font-size: 2em;
-      border: 0;
-
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    .userSection {
-      position: relative;
-      top: unset;
-      left: unset;
-      background-color: unset;
-      width: unset;
-      padding: unset;
     }
   }
 }
